# vision-language-models-are-bows

./: .gitignore  pyproject.toml
dataset_zoo/: aro_datasets.py
notebooks/: experiment.ipynb  vga_results.csv  vga_results_no_image.csv  vga_results_with_image.csv  vgr_results.csv  vgr_results_no_image.csv  vgr_results_with_image.csv
