[project]
name = "vision-language-models-are-bows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "clip",
    "easydict>=1.13",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "open-clip-torch>=2.30.0",
    "openai-clip>=1.0.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pip>=25.0",
    "qwen-vl-utils[decord]>=0.0.10",
    "spacy>=3.8.4",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
